--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,8 +158,8 @@ img {
         color: #e2f7f8;
     }
 
-    .space {
-        margin: 20px 10px 10px 10px;
+    .formtext {
+        color: #e2f7f8;
     }
 }
 
@@ -177,32 +177,41 @@ img {
     p {
         font-size: 12pt;
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-        color: #ffffff;
+        color: #e2f7f8;
     }
 
     .space {
         margin: 20px 10px 10px 10px;
     }
 
-    @media screen and (min-width: 980px) {
-        .textbox {
-            margin: 0px 0px 20px 0px;
-            padding: 20px;
-            width: 95%;
-            float: left;
-            position: relative;
-            left: 7%;
-            background-color: rgb(2, 74, 92);
-        }
-    
-        p {
-            font-size: 12pt;
-            font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-            color: #ffffff;
-        }
-        
-        .space {
-            margin: 20px 10px 10px 10px;
-        }
+    .formtext {
+        color: #e2f7f8;
+    }
+}
 
+@media screen and (min-width: 980px) {
+    .textbox {
+        margin: 0px 0px 20px 0px;
+        padding: 20px;
+        width: 95%;
+        float: left;
+        position: relative;
+        left: 7%;
+        background-color: rgb(2, 74, 92);
+    }
+    
+    p {
+        font-size: 12pt;
+        font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+        color: #e2f7f8;
+    }
+        
+    .space {
+         margin: 20px 10px 10px 10px;
+    }
+
+        
+     .formtext {
+         color: #e2f7f8;
+    }
 }
