--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ img {
     .textbox {
         margin: 0 auto;
         padding: 10px;
-        width: 90%;
+        width: 85%;
         float: left;
         position: relative;
         left: 7%;
@@ -158,6 +158,10 @@ img {
         color: #e2f7f8;
     }
 
+    .space {
+        margin: 20px 10px 10px 10px;
+    }
+
     .formtext {
         color: #e2f7f8;
     }
@@ -167,7 +171,7 @@ img {
     .textbox {
         margin: 0 auto;
         padding: 10px;
-        width: 95%;
+        width: 90%;
         float: left;
         position: relative;
         left: 7%;
@@ -193,7 +197,7 @@ img {
     .textbox {
         margin: 0px 0px 20px 0px;
         padding: 20px;
-        width: 95%;
+        width: 100%;
         float: left;
         position: relative;
         left: 7%;
